# asyncdownloader

./: Makefile  README.md  app.py  pyproject.toml  services.py  settings.py  setup.cfg
src/: __init__.py  a_services.py  app.py  app_interfaces.py  logger.py  services.py  settings.py
tests/: conftest.py  test_app.py  test_httpclient.py
tests/src/: test_app.py  test_httpclient.py
tests/unit/: test_app.py  test_httpclient.py
